next version <kevin@koconnor.net>

  * Add new commands: LOG UNLOG

20061118 0.4.4 <kevin@koconnor.net>

  * Add ability to bind haret, kernel, and initrd into a single exe.
    This is done by running:

    make linload CMDLINE="xx" KERNEL=zImage INITRD=abc

    A file out/linload.exe will be created.  Running this on a pda
    will launch the specified kernel.  This feature may be useful for
    building linux installation kits in an easy to run application.

  * New linux bootloading code.  This new code now does most of the
    actions from C code.  This allows more diagnostic utilities (eg,
    now lines are written to the framebuffer from the preloader).
    Note that the penguin logo was disabled in this release.  (A
    simple progress bar was added in its place.)

  * Reenabled support for detection of framebuffer via gx.dll calls
    (eg, GXOpenDisplay).  This is done via the late library loading
    code.

20061115 0.4.3 <kevin@koconnor.net>

  * Add pxa specific interrupt watching code.  This allows one to
    trace interrupts, trace memory access, and set instruction
    breakpoints.  This command is only available when haret is run on
    a pxa processor.

  * Add the ability to bind functions to dlls at runtime instead of at
    compile time.  This allows the code to run on older OSs, while
    still offering advanced functionality on newer pdas.  This is
    available via the LOAD_LATE macro in lateload.h.

  * Add support for enabling/disabling commands and variables at
    startup.  This is useful to disable commands that aren't
    applicable to a certain platform.

20061112 0.4.2 <kevin@koconnor.net>

  * Implement command registration capability.  Now it is possible to
    register a new command by using the REG_CMD macro found in
    script.h.  This means script.cpp shouldn't need to be modified as
    new commands are added.

  * Change Output to take a "char *" instead of "wchar_t *" for the