@@ -82,7 +82,7 @@ COREOBJS := $(MACHOBJS) haret-res.o \
 
 HARETOBJS := $(COREOBJS) haret.o \
   s-cpu.o gpio.o uart.o wincmds.o irqchain.o getsetcp.o irq.o \
-  script.o network.o terminal.o com_port.o toolhelp.lib
+  script.o network.o terminal.o com_port.o tlhcmds.o
 
 $(OUT)haret-debug: $(addprefix $(OUT),$(HARETOBJS)) src/haret.lds
 	@echo "  Linking $@"
