@@ -1,6 +1,11 @@
 next version <kevin@koconnor.net>
 
-  * Add new commands: LOG UNLOG
+  * Add new commands: LOG, UNLOG, PS, KILL
+
+  * Removed support for command-line options "-r" and "-k".  These
+    options are superceded by the linload.exe program and the command
+    "KILL".  This was done, in part, because the "-k" option required
+    toolhelp.dll which may not be present on old PDAs.
 
 20061118 0.4.4 <kevin@koconnor.net>
 
